--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon src/index.ts",
+    "demo": "npx ts-node src/test.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
