--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
   }
 }
